# ProjetoCG-FINAL

./: .gitignore  README.md
PL1/: .gitignore
PL1/Engine/: CMakeLists.txt  Point.cpp  Point.h  Triangle.cpp  Triangle.h  main.cpp  main.h
PL1/Generator/: main.cpp
PL1/Models/: box.3d  cone.3d  plane.3d  sphere.3d
PL1/test_files_phase_1/: test_1_2.xml  test_1_5.xml
PL2/: .gitignore
PL2/Engine/: CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Group.cpp  Group.h  Light.cpp  Light.h  Point.cpp  Point.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Solid.cpp  Solid.h  Transformation.h  Translate.cpp  Translate.h  Triangle.cpp  Triangle.h  main.cpp  main.h
PL2/Generator/: main  main.cpp  main.h
PL2/Models/: bezier.3d  bezier_nt.3d  box_nt.3d  bruh.3d  cone.3d  cone_nt.3d  cube.3d  plane.3d  plane_nt.3d  sphere.3d  sphere_antiga.3d  sphere_nt.3d  teapot.3d
PL2/test_files_phase_1/: test_1_3.xml  test_1_4.xml
PL2/test_files_phase_2/: sistema_solar.xml
PL2/test_files_phase_3/: sistema_solar.xml
PL2/test_files_phase_4/: sistema_solar.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml  test_4_7.xml
